--- a/api/.env
+++ b/api/.env
@@ -3,3 +3,6 @@ DB_USER=root
 DB_PASSWORD=Diego020304.
 DB_NAME=estagio
 JWT_SECRET=MeuSuperDiegoSecretoSenhaTopS123
+
+EMAIL_USER=diegopreisslerarial@gmail.com
+EMAIL_PASS=vwiqpcxjjgxmgwsx
